--- a/index.html
+++ b/index.html
@@ -301,7 +301,7 @@
             <!-- Featured Testimonial -->
             <div class="bg-gradient-to-r from-green-50 to-blue-50 rounded-lg p-8 mb-8 card-shadow max-w-4xl mx-auto">
                 <div class="text-center">
-                    <div class="text-6xl mb-4">⭐</div>
+                    <div class="text-6xl mb-4">⭐⭐⭐⭐⭐</div>
                     <blockquote class="text-xl md:text-2xl text-gray-800 mb-6 italic">
                         "Antes da mentoria, eu recusava todos os casos de canal. Hoje, atendo com segurança e ainda
                         recebo pacientes encaminhados por outros dentistas!"
