--- a/index.html
+++ b/index.html
@@ -1,42 +1,57 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
-
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mentoria Endodontia - Dra. Milena Teodoro</title>
-    <script src="https://cdn.tailwindcss.com"></script>
-    <style>
-        @import url('https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&display=swap');
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Mentoria Endodontia - Dra. Milena Teodoro</title>
 
-        body {
-            font-family: 'Inter', sans-serif;
-        }
+  <!-- SEO -->
+  <meta name="description" content="Mentoria prática e exclusiva em endodontia com a Dra. Milena Teodoro. Transforme insegurança em confiança clínica." />
+  <meta name="keywords" content="mentoria endodontia, curso endodontia, canal, odontologia, dra milena teodoro" />
 
-        .gradient-bg {
-            background: #ad8e02;
-        }
+  <!-- Open Graph -->
+  <meta property="og:title" content="Mentoria Endodontia - Dra. Milena Teodoro" />
+  <meta property="og:description" content="Transforme sua insegurança em domínio clínico com acompanhamento personalizado." />
+  <meta property="og:image" content="https://seudominio.com/imagem-compartilhamento.jpg" />
+  <meta property="og:url" content="https://seudominio.com" />
+  <meta property="og:type" content="website" />
+  <meta name="twitter:card" content="summary_large_image" />
 
-        .card-shadow {
-            box-shadow: 0 20px 25px -5px rgba(0, 0, 0, 0.1), 0 10px 10px -5px rgba(0, 0, 0, 0.04);
-        }
+  <!-- Tailwind CSS -->
+  <script src="https://cdn.tailwindcss.com"></script>
 
-        .pulse-animation {
-            animation: pulse 2s infinite;
-        }
+  <!-- Fonts -->
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700&display=swap" rel="stylesheet" />
 
-        @keyframes pulse {
+  <style>
+    body {
+      font-family: 'Inter', sans-serif;
+    }
 
-            0%,
-            100% {
-                transform: scale(1);
-            }
+    .gradient-bg {
+      background: #ad8e02;
+    }
 
-            50% {
-                transform: scale(1.05);
-            }
-        }
-    </style>
+    .card-shadow {
+      box-shadow: 0 20px 25px -5px rgba(0, 0, 0, 0.1), 0 10px 10px -5px rgba(0, 0, 0, 0.04);
+    }
+
+    .pulse-animation {
+      animation: pulse 2s infinite;
+    }
+
+    @keyframes pulse {
+      0%, 100% {
+        transform: scale(1);
+      }
+
+      50% {
+        transform: scale(1.05);
+      }
+    }
+  </style>
 </head>
 
 <body class="bg-gray-50">
