--- a/index.html
+++ b/index.html
@@ -58,10 +58,8 @@
     <!-- Header -->
     <header class="gradient-bg text-white py-16">
         <div class="container mx-auto px-4 text-center">
-            <h1 class="text-4xl md:text-6xl font-bold mb-6">MENTORIA ENDODONTIA</h1>
-            <h2 class="text-xl md:text-2xl font-light mb-8 max-w-4xl mx-auto leading-relaxed">
-                Domine o Tratamento de Canal e Nunca Mais Perca Pacientes por Insegurança!
-            </h2>
+            <h1 class="text-4xl md:text-6xl font-bold mb-6">Domine o Tratamento de Canal e Nunca Mais Perca Pacientes por Insegurança!</h1>
+            
             <p class="text-lg md:text-xl mb-12 max-w-3xl mx-auto">
                 Em apenas 2 módulos práticos e exclusivos, você vai conquistar segurança clínica real para executar
                 tratamentos de canal, com o acompanhamento de uma especialista em endodontia com 30 anos de experiência.
