--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Mentoria Endodontia - Dra. Milena Teodoro</title>
-  <link rel="icon" type="image/x-icon" href="/image/Logo DR.pdf">
+  <link rel="icon" type="image/x-icon" href="/image/Logo-DR.jpg">
 
   <!-- SEO -->
   <meta name="description" content="Mentoria prática e exclusiva em endodontia com a Dra. Milena Teodoro. Transforme insegurança em confiança clínica." />
