--- a/index.html
+++ b/index.html
@@ -140,10 +140,12 @@
             <div class="grid md:grid-cols-2 gap-12 items-center">
                 <div class="text-center">
                     <div class="bg-white rounded-lg p-8 card-shadow">
-                        <div
-                            class="w-48 h-48 bg-gradient-to-br from-blue-400 to-purple-500 rounded-full mx-auto mb-6 flex items-center justify-center">
-                            <span class="text-white text-6xl font-bold">DM</span>
-                        </div>
+                        div class="w-full h-auto rounded-lg overflow-hidden">
+                        <img src="/image/Logo-DR.jpg"
+                            alt="Logo DR Milena Teodoro"
+                            class="w-full h-auto object-cover rounded-lg" loading="lazy"
+                            onerror="this.style.display='none';" />
+                    </div>
                         <h3 class="text-xl font-semibold text-gray-800">Dra. Milena Teodoro</h3>
                         <p class="text-gray-600">Especialista em Endodontia</p>
                     </div>
