--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
             <div class="grid md:grid-cols-2 gap-12 items-center">
                 <div class="text-center">
                     <div class="bg-white rounded-lg p-8 card-shadow">
-                        div class="w-full h-auto rounded-lg overflow-hidden">
+                       <div class="w-full h-auto rounded-lg overflow-hidden">
                         <img src="/image/Logo-DR.jpg"
                             alt="Logo DR Milena Teodoro"
                             class="w-full h-auto object-cover rounded-lg" loading="lazy"
