--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
                 <div class="text-center">
                     <div class="bg-white rounded-lg p-8 card-shadow">
                         <div
-                            class="w-48 h-48 bg-gradient-to-br from-blue-400 to-purple-500 rounded-full mx-auto mb-6 flex items-center justify-center">
+                            class="w-48 h-48 gradient-bg rounded-full mx-auto mb-6 flex items-center justify-center">
                             <span class="text-white text-6xl font-bold">DM</span>
                         </div>
                         <h3 class="text-xl font-semibold text-gray-800">Dra. Milena Teodoro</h3>
