--- a/index.html
+++ b/index.html
@@ -32,8 +32,7 @@
     }
 
     .gradient-bg {
-      background: #5c2d37;
-    }
+      background: #FF97CF    }
 
     .card-shadow {
       box-shadow: 0 20px 25px -5px rgba(0, 0, 0, 0.1), 0 10px 10px -5px rgba(0, 0, 0, 0.04);
