--- a/index.html
+++ b/index.html
@@ -32,7 +32,12 @@
     }
 
     .gradient-bg {
-      background: #DEA193    }
+      background: #DEA193
+    }
+    
+    .gradient-bg-2 {
+      background: #F7E6CA
+    }
 
     .card-shadow {
       box-shadow: 0 20px 25px -5px rgba(0, 0, 0, 0.1), 0 10px 10px -5px rgba(0, 0, 0, 0.04);
@@ -348,7 +353,7 @@
     </section>
 
     <!-- CTA Section -->
-    <section class="py-16 gradient-bg text-white">
+    <section class="py-16 gradient-bg-2 text-white">
         <div class="container mx-auto px-4 text-center">
             <h2 class="text-3xl md:text-4xl font-bold mb-6">Vagas extremamente limitadas – apenas 2 alunos por turma!
             </h2>
