--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     }
     
     .gradient-bg-2 {
-      background: #F7D9BC
+      background: #F7D9BC   
     }
 
     .card-shadow {
@@ -353,7 +353,7 @@
     </section>
 
     <!-- CTA Section -->
-    <section class="py-16 gradient-bg-2 text-white">
+    <section class="py-16 gradient-bg-2 text-gray-400">
         <div class="container mx-auto px-4 text-center">
             <h2 class="text-3xl md:text-4xl font-bold mb-6">Vagas extremamente limitadas – apenas 2 alunos por turma!
             </h2>
