--- a/index.html
+++ b/index.html
@@ -353,7 +353,7 @@
     </section>
 
     <!-- CTA Section -->
-    <section class="py-16 gradient-bg-2 text-gray-200">
+    <section class="py-16 gradient-bg-2 text-emerald-">
 
         <div class="container mx-auto px-4 text-center">
             <h2 class="text-3xl md:text-4xl font-bold mb-6">Vagas extremamente limitadas – apenas 2 alunos por turma!
