--- a/index.html
+++ b/index.html
@@ -323,7 +323,7 @@
                     <blockquote class="text-xl md:text-2xl text-gray-800 mb-6 italic">
                         "Antes da mentoria, eu recusava todos os casos de canal. Hoje, atendo com segurança e ainda
                         recebo pacientes encaminhados por outros dentistas!"
-                    </blockquote>
+                    </blockquote> 
                     <p class="text-gray-600 font-semibold">- Filha da Dra. Milena</p>
                 </div>
             </div>
@@ -353,7 +353,7 @@
     </section>
 
     <!-- CTA Section -->
-    <section class="py-16 gradient-bg-2 text-emerald-">
+    <section class="py-16 gradient-bg-2 text-emerald-900">
 
         <div class="container mx-auto px-4 text-center">
             <h2 class="text-3xl md:text-4xl font-bold mb-6">Vagas extremamente limitadas – apenas 2 alunos por turma!
