--- a/index.html
+++ b/index.html
@@ -406,7 +406,7 @@
     </section>
 
     <!-- Final CTA -->
-    <section class="py-16 bg-rose-900 text-white">
+    <section class="py-16 bg-rose-800 text-white">
         <div class="container mx-auto px-4 text-center">
             <h2 class="text-3xl md:text-4xl font-bold mb-8">Pronto para Transformar sua Carreira?</h2>
             <p class="text-xl mb-8 max-w-2xl mx-auto">
@@ -421,7 +421,7 @@
     </section>
 
     <!-- Footer -->
-    <footer class="bg-gray-900 text-white py-8">
+    <footer class="bg-rose-900 text-white py-8">
         <div class="container mx-auto px-4 text-center">
             <p class="text-gray-400">© 2025 Mentoria Endodontia - Dra. Milena Teodoro. Todos os direitos reservados - OnJob's.</p>
         </div>
