--- a/index.html
+++ b/index.html
@@ -423,7 +423,7 @@
     <!-- Footer -->
     <footer class="bg-gray-900 text-white py-8">
         <div class="container mx-auto px-4 text-center">
-            <p class="text-gray-400">© 2025 Mentoria Endodontia - Dra. Milena Teodoro. Todos os direitos reservados -<a href="www.instagram.com/_gianvieira">OnJob's</a> OnJob's.</p>
+            <p class="text-gray-400">© 2025 Mentoria Endodontia - Dra. Milena Teodoro. Todos os direitos reservados - <a href="https://instagram.com/_gianvieira" target="_blank" rel="noopener noreferrer">OnJob's</a>.</p>
         </div>
     </footer>
     <script>(function () { function c() { var b = a.contentDocument || a.contentWindow.document; if (b) { var d = b.createElement('script'); d.innerHTML = "window.__CF$cv$params={r:'96af8f0065576223',t:'MTc1NDQ5NDA0OS4wMDAwMDA='};var a=document.createElement('script');a.nonce='';a.src='/cdn-cgi/challenge-platform/scripts/jsd/main.js';document.getElementsByTagName('head')[0].appendChild(a);"; b.getElementsByTagName('head')[0].appendChild(d) } } if (document.body) { var a = document.createElement('iframe'); a.height = 1; a.width = 1; a.style.position = 'absolute'; a.style.top = 0; a.style.left = 0; a.style.border = 'none'; a.style.visibility = 'hidden'; document.body.appendChild(a); if ('loading' !== document.readyState) c(); else if (window.addEventListener) document.addEventListener('DOMContentLoaded', c); else { var e = document.onreadystatechange || function () { }; document.onreadystatechange = function (b) { e(b); 'loading' !== document.readyState && (document.onreadystatechange = e, c()) } } } })();</script>
