--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
             <!-- Video Embed -->
             <div class="bg-gray-800 rounded-lg p-8 mb-8 max-w-2xl mx-auto">
                 <div class="aspect-video">
-                    <iframe class="w-full h-full rounded-lg" src="https://www.youtube.com/embed/SEU_VIDEO_ID"
+                    <iframe class="w-full h-full rounded-lg" src="/image/Milena.mp4"
                         title="Vídeo de Apresentação - Mentoria Endodontia" frameborder="0" allowfullscreen loading="lazy"></iframe>
                 </div>
             </div>
@@ -144,9 +144,9 @@
             <div class="grid md:grid-cols-2 gap-12 items-center">
                 <div class="text-center">
                     <div class="bg-white rounded-lg p-8 card-shadow">
-                        <div
-                            class="w-48 h-48 gradient-bg rounded-full mx-auto mb-6 flex items-center justify-center">
-                            <span class="text-white text-6xl font-bold">DM</span>
+                        <div class="w-full h-auto rounded-lg overflow-hidden">
+                            <img src="/image/doutora.jpeg" alt="Imagem de dentista realizando tratamento de canal com segurança"
+                                class="w-full h-auto object-cover rounded-lg" loading="lazy" onerror="this.style.display='none';" />
                         </div>
                         <h3 class="text-xl font-semibold text-gray-800">Dra. Milena Teodoro</h3>
                         <p class="text-gray-600">Especialista em Endodontia</p>
