--- a/index.html
+++ b/index.html
@@ -1,70 +1,76 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
+
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Mentoria Endodontia - Dra. Milena Teodoro</title>
-  <link rel="icon" type="image/x-icon" href="/image/Logo-DR.jpg">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Mentoria Endodontia - Dra. Milena Teodoro</title>
+    <link rel="icon" type="image/x-icon" href="/image/Logo-DR.jpg">
 
-  <!-- SEO -->
-  <meta name="description" content="Mentoria prática e exclusiva em endodontia com a Dra. Milena Teodoro. Transforme insegurança em confiança clínica." />
-  <meta name="keywords" content="mentoria endodontia, curso endodontia, canal, odontologia, dra milena teodoro" />
+    <!-- SEO -->
+    <meta name="description"
+        content="Mentoria prática e exclusiva em endodontia com a Dra. Milena Teodoro. Transforme insegurança em confiança clínica." />
+    <meta name="keywords" content="mentoria endodontia, curso endodontia, canal, odontologia, dra milena teodoro" />
 
-  <!-- Open Graph -->
-  <meta property="og:title" content="Mentoria Endodontia - Dra. Milena Teodoro" />
-  <meta property="og:description" content="Transforme sua insegurança em domínio clínico com acompanhamento personalizado." />
-  <meta property="og:image" content="https://seudominio.com/imagem-compartilhamento.jpg" />
-  <meta property="og:url" content="https://seudominio.com" />
-  <meta property="og:type" content="website" />
-  <meta name="twitter:card" content="summary_large_image" />
+    <!-- Open Graph -->
+    <meta property="og:title" content="Mentoria Endodontia - Dra. Milena Teodoro" />
+    <meta property="og:description"
+        content="Transforme sua insegurança em domínio clínico com acompanhamento personalizado." />
+    <meta property="og:image" content="https://seudominio.com/imagem-compartilhamento.jpg" />
+    <meta property="og:url" content="https://seudominio.com" />
+    <meta property="og:type" content="website" />
+    <meta name="twitter:card" content="summary_large_image" />
 
-  <!-- Tailwind CSS -->
-  <script src="https://cdn.tailwindcss.com"></script>
+    <!-- Tailwind CSS -->
+    <script src="https://cdn.tailwindcss.com"></script>
 
-  <!-- Fonts -->
-  <link rel="preconnect" href="https://fonts.googleapis.com" />
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700&display=swap" rel="stylesheet" />
+    <!-- Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700&display=swap" rel="stylesheet" />
 
-  <style>
-    body {
-      font-family: 'Inter', sans-serif;
-    }
+    <style>
+        body {
+            font-family: 'Inter', sans-serif;
+        }
 
-    .gradient-bg {
-      background: #DEA193
-    }
-    
-    .gradient-bg-2 {
-      background: #F7D9BC   
-    }
+        .gradient-bg {
+            background: #DEA193
+        }
 
-    .card-shadow {
-      box-shadow: 0 20px 25px -5px rgba(0, 0, 0, 0.1), 0 10px 10px -5px rgba(0, 0, 0, 0.04);
-    }
+        .gradient-bg-2 {
+            background: #F7D9BC
+        }
 
-    .pulse-animation {
-      animation: pulse 2s infinite;
-    }
+        .card-shadow {
+            box-shadow: 0 20px 25px -5px rgba(0, 0, 0, 0.1), 0 10px 10px -5px rgba(0, 0, 0, 0.04);
+        }
 
-    @keyframes pulse {
-      0%, 100% {
-        transform: scale(1);
-      }
+        .pulse-animation {
+            animation: pulse 2s infinite;
+        }
 
-      50% {
-        transform: scale(1.05);
-      }
-    }
-  </style>
+        @keyframes pulse {
+
+            0%,
+            100% {
+                transform: scale(1);
+            }
+
+            50% {
+                transform: scale(1.05);
+            }
+        }
+    </style>
 </head>
 
 <body class="bg-gray-50">
     <!-- Header -->
     <header class="gradient-bg text-white py-16">
         <div class="container mx-auto px-4 text-center">
-            <h1 class="text-4xl md:text-6xl font-bold mb-6">Domine o Tratamento de Canal e Nunca Mais Perca Pacientes por Insegurança!</h1>
-            
+            <h1 class="text-4xl md:text-6xl font-bold mb-6">Domine o Tratamento de Canal e Nunca Mais Perca Pacientes
+                por Insegurança!</h1>
+
             <p class="text-lg md:text-xl mb-12 max-w-3xl mx-auto">
                 Em apenas 2 módulos práticos e exclusivos, você vai conquistar segurança clínica real para executar
                 tratamentos de canal, com o acompanhamento de uma especialista em endodontia com 30 anos de experiência.
@@ -72,8 +78,8 @@
 
             <!-- Video Embed -->
             <div class="bg-gray-800 rounded-lg p-8 mb-8 max-w-md mx-auto">
-                <div class="aspect-[9/16] max-h-96">
-                    <video class="w-full h-full rounded-lg object-cover" controls poster="" preload="metadata">
+                <div class="aspect-[9/16] w-full">
+                    <video class="w-full h-full rounded-lg object-cover" controls preload="metadata" poster="">
                         <source src="/image/Milena.mp4" type="video/mp4">
                         <div class="bg-gray-700 rounded-lg flex items-center justify-center h-full">
                             <div class="text-center">
@@ -87,11 +93,12 @@
                     </video>
                 </div>
             </div>
+
             <a href="https://wa.me/5511999999999" target="_blank"
                 class="inline-block bg-green-500 hover:bg-green-600 text-white font-bold py-4 px-8 rounded-full text-lg transition-all duration-300 pulse-animation">
                 💬 Quero Falar com a Dra. Milena Agora
             </a>
-            </div>
+        </div>
     </header>
 
     <!-- Problem Section -->
@@ -154,8 +161,10 @@
                 <div class="text-center">
                     <div class="bg-white rounded-lg p-8 card-shadow">
                         <div class="w-full h-auto rounded-lg overflow-hidden">
-                            <img src="/image/doutora.jpeg" alt="Imagem de dentista realizando tratamento de canal com segurança"
-                                class="w-full h-auto object-cover rounded-lg" loading="lazy" onerror="this.style.display='none';" />
+                            <img src="/image/doutora.jpeg"
+                                alt="Imagem de dentista realizando tratamento de canal com segurança"
+                                class="w-full h-auto object-cover rounded-lg" loading="lazy"
+                                onerror="this.style.display='none';" />
                         </div>
                         <h3 class="text-xl font-semibold text-gray-800">Dra. Milena Teodoro</h3>
                         <p class="text-gray-600">Especialista em Endodontia</p>
@@ -332,7 +341,7 @@
                     <blockquote class="text-xl md:text-2xl text-gray-800 mb-6 italic">
                         "Antes da mentoria, eu recusava todos os casos de canal. Hoje, atendo com segurança e ainda
                         recebo pacientes encaminhados por outros dentistas!"
-                    </blockquote> 
+                    </blockquote>
                     <p class="text-gray-600 font-semibold">- Filha da Dra. Milena</p>
                 </div>
             </div>
@@ -432,7 +441,9 @@
     <!-- Footer -->
     <footer class="bg-gray-900 text-white py-8">
         <div class="container mx-auto px-4 text-center">
-            <p class="text-gray-400">© 2025 Mentoria Endodontia - Dra. Milena Teodoro. Todos os direitos reservados - <a href="https://instagram.com/agencia_on.jobs" target="_blank" rel="noopener noreferrer">OnJob's</a>.</p>
+            <p class="text-gray-400">© 2025 Mentoria Endodontia - Dra. Milena Teodoro. Todos os direitos reservados - <a
+                    href="https://instagram.com/agencia_on.jobs" target="_blank" rel="noopener noreferrer">OnJob's</a>.
+            </p>
         </div>
     </footer>
     <script>(function () { function c() { var b = a.contentDocument || a.contentWindow.document; if (b) { var d = b.createElement('script'); d.innerHTML = "window.__CF$cv$params={r:'96af8f0065576223',t:'MTc1NDQ5NDA0OS4wMDAwMDA='};var a=document.createElement('script');a.nonce='';a.src='/cdn-cgi/challenge-platform/scripts/jsd/main.js';document.getElementsByTagName('head')[0].appendChild(a);"; b.getElementsByTagName('head')[0].appendChild(d) } } if (document.body) { var a = document.createElement('iframe'); a.height = 1; a.width = 1; a.style.position = 'absolute'; a.style.top = 0; a.style.left = 0; a.style.border = 'none'; a.style.visibility = 'hidden'; document.body.appendChild(a); if ('loading' !== document.readyState) c(); else if (window.addEventListener) document.addEventListener('DOMContentLoaded', c); else { var e = document.onreadystatechange || function () { }; document.onreadystatechange = function (b) { e(b); 'loading' !== document.readyState && (document.onreadystatechange = e, c()) } } } })();</script>
